--- a/Code/Subgraph_Regex.ipynb
+++ b/Code/Subgraph_Regex.ipynb
@@ -38,6 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Regular Expressions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Regular expression grammar meant for creating succinct patterns through a graph. The grammar below must contain a NODE Identifier, which should correspond to the node label in the Neo4J database. \n",
     "\n",
     "Examples of valid grammar statements:\n",
@@ -180,12 +187,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extractPathways(parsed):\n",
+    "#Permutes all possible pathways from the regular expression.\n",
+    "def extractPathways(parse_tree):\n",
     "    all_elems = []\n",
     "    mlist = []\n",
     "    #Walks through the parse tree. If a node may have two or more labels\n",
     "    # it is added to our collection as a list of all possible labels.\n",
-    "    for child in parsed.children:\n",
+    "    for child in parse_tree.children:\n",
     "        if type(child) == str:\n",
     "            mlist.append([child])\n",
     "        else:\n",
@@ -197,23 +205,25 @@
     "        all_elems.append(list(i))\n",
     "        \n",
     "    #Filter null characters out of node labels.\n",
-    "    new_elems = []\n",
+    "    pathways = []\n",
     "    for i in all_elems:\n",
     "        if('' in i): \n",
     "            idx = i.index(\"\")\n",
     "            i.pop(idx)\n",
     "            i.pop(idx-1)\n",
-    "            new_elems.append(i)\n",
+    "            pathways.append(i)\n",
     "        else:\n",
-    "            new_elems.append(i)\n",
-    "    return new_elems\n",
+    "            pathways.append(i)\n",
+    "    return pathways\n",
     "\n",
+    "#Generates a CYPHER query for a regular expression. The first node in the regular expression will be \n",
+    "# mapped onto the source_node_name.\n",
     "def getQueries(source_node_name, regexes):\n",
     "    all_queries = []\n",
     "    subgraph_nodes = []\n",
     "    # parse\n",
     "    regex_parser = Lark(regex_grammar, parser='lalr',transformer=CalculateTree())\n",
-    "    parsed = regex_parser.parse(regexes)\n",
+    "    parsed = regex_parser.parse(refgexes)\n",
     "    all_pathways = extractPathways(parsed)\n",
     "    \n",
     "    queryStr = ''\n",
@@ -289,12 +299,27 @@
     "\n",
     "    return llink\n",
     "\n",
-    "\n",
-    "def getSubgraph_neo4j(uri, source_node_name, regexes, compared_labels = None):\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Provide Regex Subgraphs for a Neo4J database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getSubgraph_neo4j(graph_uri, source_node_name, regexes, compared_labels = None):\n",
     "    \n",
     "    queryStr = getQueries(source_node_name, regexes)    \n",
     "    \n",
-    "    driver = GraphDatabase.driver(uri)\n",
+    "    driver = GraphDatabase.driver(graph_uri)\n",
     "    \n",
     "    user_labels = []\n",
     "    for ele in parsing(regexes):\n",
@@ -346,45 +371,10 @@
     "        data_frames[k] = df\n",
     "\n",
     "    sg = StellarDiGraph(data_frames,edges=edges, edge_type_column=\"label\")\n",
+    "   \n",
+    "    return sg \n",
     "\n",
-    "    #print(sg.info())    \n",
-    "    return sg "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Returns counts of all node by labels in graph and all relationships by types.\n",
-    "def infoDict(subG):\n",
-    "    Info = {}\n",
-    "    for i in subG.info().split('\\n'):\n",
-    "        if '[' in i:\n",
-    "            temp = i.split(':')\n",
-    "            text = temp[0].strip()\n",
-    "            num = temp[1].split('[')[1].split(']')[0]\n",
-    "            Info[text] = num\n",
-    "        \n",
-    "    return Info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# find union subgraph for two drugs\n",
-    "\n",
     "def querySubgraph(G, regexes, queryStr, compared_labels = None):\n",
     "    \n",
     "    uri = G\n",
@@ -443,6 +433,32 @@
     "    \n",
     "    return sg "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Returns counts of all node by labels in graph and all relationships by types.\n",
+    "def infoDict(subG):\n",
+    "    Info = {}\n",
+    "    for i in subG.info().split('\\n'):\n",
+    "        if '[' in i:\n",
+    "            temp = i.split(':')\n",
+    "            text = temp[0].strip()\n",
+    "            num = temp[1].split('[')[1].split(']')[0]\n",
+    "            Info[text] = num\n",
+    "        \n",
+    "    return Info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -598,22 +614,21 @@
     "\n",
     "Node_List = [['dexamethasone', 'canagliflozin'],\n",
     "['afatinib', 'captopril'],\n",
-    "\n",
     "['escitalopram', 'losartan'],\n",
     "['betamethasone', 'enalapril'],\n",
     "['dapagliflozin', 'nifedipine'],\n",
     "['escitalopram', 'felodipine']]\n",
     "#['simvastatin', 'alendronate sodium trihydrate'],\n",
     "    \n",
-    "def buildAndWalkSubgraphs(G, node_list, user_input, compared_labels, walk_lengths=[10, 20, 40, 60, 80])\n",
+    "def buildAndWalkSubgraphs(G, node_list, regex_pattern, compared_labels, walk_lengths=[10, 20, 40, 60, 80])\n",
     "    Results =[]\n",
     "    subGs = {}\n",
     "    SRdict = {}\n",
     "    for node in node_list:\n",
     "        print('building subgraph for ',node)\n",
-    "        subG = getSubgraph_neo4j(G, node, user_input, compared_labels)\n",
+    "        subG = getSubgraph_neo4j(G, node, regex_pattern, compared_labels)\n",
     "        subGs[node] = subG\n",
-    "        SR = semanticRatio(user_input, subG)\n",
+    "        SR = semanticRatio(regex_pattern, subG)\n",
     "        SRdict[node] = SR\n",
     "\n",
     "        \n",
@@ -670,7 +685,7 @@
     "            print(\"Time spend: \", end - start)\n",
     "\n",
     "        # Generate embeddings\n",
-    "        from gensim.models import Word2Vec\n",
+    "\n",
     "        str_walks = [[str(n) for n in walk] for walk in Walks]\n",
     "        model = Word2Vec(str_walks, size=128, window=5, min_count=0, sg=1, workers=2, iter=5)\n",
     "\n",
@@ -740,111 +755,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(Results, columns=['drug_pairs', 'SR_subgraphs', 'walk_length', 'cos_sim', 'rank', 'num_nodes', 'prop', 'rank_ex', 'num_nodes_ex', 'SR_walks'])\n",
-    "df.to_csv('robokop_neg_semantic.csv', index=False)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Check common nodes in subgraphs\n",
-    "\n",
-    "\n",
-    "#node_list = ['Canagliflozin', 'Dapagliflozin'] #0.31\n",
-    "#node_list = ['Dexamethasone', 'Betamethasone'] #0.479\n",
-    "#node_list = ['Lapatinib', 'Afatinib'] #0.156\n",
-    "#node_list = ['Captopril', 'Enalapril'] #0.346\n",
-    "#node_list = ['Losartan', 'Valsartan'] #0.322\n",
-    "#node_list = ['Nifedipine', 'Felodipine'] #0.305\n",
-    "#node_list = ['Simvastatin', 'Atorvastatin'] #0.216\n",
-    "#node_list = ['Alendronate', 'Incadronate'] #0.041 @@\n",
-    "#node_list = ['Citalopram', 'Escitalopram'] #0.412\n",
-    "\n",
-    "# negative\n",
-    "#node_list =['Dexamethasone', 'Voglibose'] # 0.006\n",
-    "#node_list =['Lapatinib', 'Voglibose'] # 0\n",
-    "\n",
-    "#node_list =['Dexamethasone', 'Canagliflozin'] # 0.118\n",
-    "#node_list = ['Afatinib', 'Captopril'] # 0.168\n",
-    "#node_list = ['Simvastatin', 'Alendronate'] # 0.104\n",
-    "#node_list = ['Escitalopram', 'Losartan'] # 0.175\n",
-    "#node_list = ['Betamethasone', 'Enalapril'] # 0.21\n",
-    "#node_list = ['Dapagliflozin', 'Nifedipine'] # 0.294\n",
-    "#node_list = ['Atorvastatin', 'Incadronate'] # 0.012\n",
-    "node_list = ['Citalopram', 'Felodipine'] # 0.284\n",
-    "\n",
-    "\n",
-    "\n",
-    "#'Methylphenobarbital', 'Talbutal', 'Amobarbital', 'Etidronic acid'\n",
-    "list_compare = []\n",
-    "for i in node_list:\n",
-    "    \n",
-    "    subG = getSubgraph(G, i, user_input)\n",
-    "    list_subG = list(subG.nodes())\n",
-    "    print('# total nodes = ', len(list_subG))\n",
-    "    list_compare.append(list_subG)\n",
-    "\n",
-    "list_u = set(list_compare[0]).intersection(set(list_compare[1]))\n",
-    "print(len(list_u))\n",
-    "print(len(list_compare[0])+len(list_compare[1]))\n",
-    "ratio = len(list_u)/(len(list_compare[0])+len(list_compare[1]))\n",
-    "print(ratio)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Non-Semantic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#user_input = \"Compound ? (Gene|Disease) ASSOCIATES_DaG< Disease\"\n",
-    "Node_List = [['Dexamethasone', 'Betamethasone'],['Lapatinib', 'Afatinib'],\n",
-    "            ['Captopril', 'Enalapril'],['Losartan', 'Valsartan'],['Nifedipine', 'Felodipine'],\n",
-    "            ['Simvastatin', 'Atorvastatin'],['Citalopram', 'Escitalopram']]\n",
-    "\n",
-    "#['Canagliflozin', 'Dapagliflozin'],['Alendronate', 'Incadronate'],\n",
-    "# Node_List = [\n",
-    "#             ['Afatinib', 'Captopril'],['Simvastatin', 'Alendronate'],['Escitalopram', 'Losartan'],\n",
-    "#             ['Betamethasone', 'Enalapril'],['Dapagliflozin', 'Nifedipine'],\n",
-    "#             ['Citalopram', 'Felodipine']]\n",
-    "\n",
-    "#['Dexamethasone', 'Voglibose'],['Lapatinib', 'Voglibose'],['Atorvastatin', 'Incadronate'],['Dexamethasone', 'Canagliflozin'],\n",
-    "\n",
-    "# Node_List = [['dexamethasone', 'betamethasone'],\n",
-    "#  ['canagliflozin', 'dapagliflozin'],\n",
-    "#  ['lapatinib', 'afatinib'],\n",
-    "#  ['captopril', 'enalapril'],\n",
-    "#  ['losartan', 'valsartan'],\n",
-    "#  ['nifedipine', 'felodipine'],\n",
-    "#  ['simvastatin', 'atorvastatin'],\n",
-    "# ['fluconazole', 'voriconazole']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compared_labels"
+    "# Machine Learning on Semantic Subgraphs"
    ]
   },
   {
@@ -900,41 +814,6 @@
     "            )\n",
     "            print(\"DeepWalk:\")\n",
     "            print(\"Number of random walks: {}\".format(len(walks)))\n",
-    "            #print(len(walks[0]))\n",
-    "\n",
-    "            # Node2Vec\n",
-    "    #         rw = BiasedRandomWalk(subG)\n",
-    "    #         walks = rw.run(\n",
-    "    #             nodes= [i],  # root nodes\n",
-    "    #             length = adj_l,  # maximum length of a random walk\n",
-    "    #             n = 5,  # number of random walks per root node\n",
-    "    #             p = 2,  # Defines (unormalised) probability, 1/p, of returning to source node\n",
-    "    #             q = 0.5#,  # Defines (unormalised) probability, 1/q, for moving away from source node\n",
-    "    #             #seed = 5\n",
-    "    #         )\n",
-    "\n",
-    "    #         print(\"DeepWalk:\")\n",
-    "    #         print(\"Number of random walks: {}\".format(len(walks)))\n",
-    "    #         print(len(walks[0]))\n",
-    "    #         #print(walks)\n",
-    "\n",
-    "\n",
-    "    #         # Metapath2vec\n",
-    "    #         metapath = [['Compound','Gene','Disease', 'Gene', 'Compound']]#,['Compound','Disease','Compound']]\n",
-    "    #         rw = UniformRandomMetaPathWalk(subG)\n",
-    "\n",
-    "    #         walks = rw.run(\n",
-    "    #             nodes= [i],#list(G.nodes()),  # root nodes\n",
-    "    #             length = l,  # maximum length of a random walk\n",
-    "    #             n = 5,  # number of random walks per root node\n",
-    "    #             metapaths = metapath#,\n",
-    "    #             #seed = 5\n",
-    "    #         )\n",
-    "    #         print(\"Metapath2vec:\")\n",
-    "    #         print(\"Number of random walks: {}\".format(len(walks)))\n",
-    "    #         print(len(walks[0]))\n",
-    "    #         #print(walks)\n",
-    "\n",
     "\n",
     "            # append walks\n",
     "            for w in walks:\n",
@@ -1018,108 +897,14 @@
     "        result_row = [node_list, SRdict, l, sim.tolist()[0][0], rank, num, prop, rank_ex, num_ex, SR_walks]\n",
     "        Results.append(result_row)\n",
     "\n",
-    "Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(Results, columns=['drug_pairs', 'SR_subgraphs', 'walk_length', 'cos_sim', 'rank', 'num_nodes', 'prop', 'rank_ex', 'num_nodes_ex', 'SR_walks'])\n",
-    "df.to_csv('robokop_neg_nonsemantic_lower.csv', index=False)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# semantic ratio for walks (not include edges)\n",
-    "semanticRatio_walks(user_input, Walks, subGs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "print(Counter(nodeDict.values()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subG.node_type(n3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# positive pairs\n",
-    "#node_list = ['Canagliflozin', 'Dapagliflozin'] #0.271\n",
-    "#node_list = ['Dexamethasone', 'Betamethasone'] #0.0981\n",
-    "#node_list = ['Lapatinib', 'Afatinib'] #0.0903\n",
-    "#node_list = ['Captopril', 'Enalapril'] #0.1106\n",
-    "node_list = ['Losartan', 'Valsartan'] #?\n",
-    "#node_list = ['Nifedipine', 'Felodipine'] #0.0628\n",
-    "#node_list = ['Simvastatin', 'Atorvastatin'] #0.0467\n",
-    "#node_list = ['Alendronate', 'Incadronate'] #0.1075\n",
-    "#node_list = ['Citalopram', 'Escitalopram'] #0.3623\n",
-    "\n",
-    "# negative pairs\n",
-    "#node_list =['Dexamethasone', 'Voglibose'] # 0.0508\n",
-    "#node_list =['Lapatinib', 'Voglibose'] # 0.0447\n",
-    "\n",
-    "#node_list =['Dexamethasone', 'Canagliflozin'] # 0.066\n",
-    "#node_list = ['Afatinib', 'Captopril'] # 0.104\n",
-    "#node_list = ['Simvastatin', 'Alendronate'] # 0.105\n",
-    "#node_list = ['Escitalopram', 'Losartan'] # 0.0807\n",
-    "#node_list = ['Betamethasone', 'Enalapril'] # 0.078\n",
-    "#node_list = ['Dapagliflozin', 'Nifedipine'] # 0.0775\n",
-    "#node_list = ['Atorvastatin', 'Incadronate'] # 0.0194\n",
-    "#node_list = ['Citalopram', 'Felodipine'] # 0.0913\n",
-    "\n",
-    "\n",
-    "list_compare = []\n",
-    "for i in node_list:\n",
-    "    #list_subG = []\n",
-    "    \n",
-    "    #query = \"Match (n0)-[r1]->(n1)-[r2]->(n2)-[r3]-(n3) Where n0.name = '%s' Return * limit 200\"% i\n",
-    "    query = \"Match (n0)-[r1]->(n1)-[r2]->(n2) Where n0.name = '%s' Return * limit 1000\"% i\n",
-    "    \n",
-    "    print(query)\n",
-    "    subG = getSubgraph_non(G, i, query)\n",
-    "    \n",
-    "    \n",
-    "    list_subG = list(subG.nodes())\n",
-    "    print('# total nodes = ', len(list_subG))\n",
-    "    list_compare.append(list_subG)\n",
-    "\n",
-    "\n",
-    "list_u = set(list_compare[0]).intersection(set(list_compare[1]))\n",
-    "print('# common nodes = ',len(list_u))\n",
-    "print(len(list_compare[0])+len(list_compare[1]))\n",
-    "ratio = len(list_u)/(len(list_compare[0])+len(list_compare[1]))\n",
-    "print(ratio)"
+    "    return Results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Examples</h1>"
+    "<h1>Example Run</h1>"
    ]
   },
   {
@@ -1136,22 +921,6 @@
     "print(sg.info())\n",
     "print(\"Time spent: \", end - start)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "infoDict(sg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
