--- a/Code/Subgraph_Regex.ipynb
+++ b/Code/Subgraph_Regex.ipynb
@@ -736,6 +736,66 @@
     "            'Enalapril','Valsartan','Felodipine',\n",
     "            'Atorvastatin','Incadronate','Escitalopram'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Second Use Case - Disease"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Hetionet (Disease)\n",
+    "\n",
+    "node_list = [\"hypertension\",\"coronary artery disease\",\n",
+    "\"endogenous depression\",\"panic disorder\",\n",
+    "\"schizophrenia\",\n",
+    "\"endogenous depression\",\n",
+    "\"pancreatic cancer\",\"lung cancer\",\n",
+    "\"breast cancer\",\"ovarian cancer\",\n",
+    "\"bipolar disorder\",\"endogenous depression\",\n",
+    "\"stomach cancer\",\"prostate cancer\",\n",
+    "\"migraine\",\"epilepsy syndrome\"]\n",
+    "\n",
+    "\n",
+    "node_pair1 = [\"hypertension\",\"endogenous depression\",\"schizophrenia\",\"endogenous depression\",\"pancreatic cancer\",\n",
+    "              \"breast cancer\",\"bipolar disorder\",\"bipolar disorder\",\"stomach cancer\",\"migraine\"]\n",
+    "\n",
+    "\n",
+    "node_pair2 = [\"coronary artery disease\",\"panic disorder\",\"panic disorder\",\"panic disorder\",\"lung cancer\",\n",
+    "              \"ovarian cancer\",\"endogenous depression\",\"panic disorder\",\"prostate cancer\",\"epilepsy syndrome\"]\n",
+    "\n",
+    "\n",
+    "semantic_query = \"Disease ASSOCIATES_DaG> Gene BINDS_CbG Compound\"\n",
+    "\n",
+    "\n",
+    "subgraph_dict = buildSubgraphDictonaryForNodes(node_list, \"bolt://neo4j.het.io\", semantic_query, None)\n",
+    "\n",
+    "metapaths = [['Disease', 'Gene', 'Compound', 'Gene', 'Disease']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Walks = compactWalks(subgraph_dict, node_list, 'deepwalk', 80, 5)\n",
+    "model = buildModel(Walks)\n",
+    "\n",
+    "# Retrieve node embeddings and corresponding subjects\n",
+    "node_ids = model.wv.index2word  # list of node IDs\n",
+    "node_embeddings = (\n",
+    "    model.wv.vectors\n",
+    ")\n",
+    "\n",
+    "evaluate(model, subgraph_dict, node_pair1, node_pair2)"
+   ]
   }
  ],
  "metadata": {
